VeraSandBox2016/src/objects/Mission_Partnership__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Mission Partnerships</relationshipLabel>
        <relationshipName>Mission_Partnerships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Mission Partnerships</relationshipLabel>
        <relationshipName>Mission_Partnerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <label>Mission</label>
        <referenceTo>Mission__c</referenceTo>
        <relationshipLabel>Mission Partnerships</relationshipLabel>
        <relationshipName>Mission_Partnerships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partnership_Details__c</fullName>
        <label>Partnership Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partnership_Type__c</fullName>
        <label>Partnership Type</label>
        <picklist>
            <picklistValues>
                <fullName>Requesting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End-User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Mission Partnership</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MIP-{00000}</displayFormat>
        <label>JRRID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mission Partnerships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>